# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "counhto"
version = "1.1.0"
description = "Python package for generating and demultiplexing hash tag oligo count matrices from cellranger output"
readme = "README.md"
authors = [{ name = "Daniel Malzl", email = "daniel@menchelab.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = [
    'bioinformatics',
    'single cell sequencing',
    'sequencing',
    'NGS',
    'hashtag oligo counting',
    'hashtag oligo demultiplexing',
    'cellranger'
]
dependencies = [
    'pysam >= 0.20.0',
    'scipy >= 1.10'
]
requires-python = ">=3.10"

[project.scripts]
counhto = 'counhto.main:main'

[project.urls]
Homepage = "https://github.com/dmalzl/counhto"